# market-data-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: integration_download.rs  integration_twelvedata.rs
