[package]
name = "market-data-downloader"
version = "0.2.0"
edition = "2024"
description = "A small Rust CLI to download market data aggregates from Polygon.io (minute or daily), and save them as CSV or JSON."
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
